# BeGin

./: .gitignore  CMakeLists.txt  specifiche_architettura_haiku.md
API/: documentazione_haiku_api.md  haiku_api_scraper_completo.py
modules/TaskManager/: CMakeLists.txt  TaskManagerModule.cpp
sdk/: BaseModule.h  README.md
src/: App.cpp  App.h  EmptyView.cpp  EmptyView.h  MainWindow.cpp  MainWindow.h  ModuleManagementView.cpp  ModuleManagementView.h  WarningBanner.cpp  WarningBanner.h  main.cpp
